tests/e2e/semantics/continue_outside2.error
Error: syntax error in story at line 2, column 1

2|    continue
      ^^^^^^^^

E0133: `continue` is allowed only inside loops
